[package]
name = "zeus_node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bytes = "1"
clap = { version = "4.5.57", features = ["derive"] }
ed25519-dalek = "2.2.0"
quinn = "0.11.9"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
zeus_common = { version = "0.1.0", path = "../zeus_common" }
zeus_transport = { version = "0.1.0", path = "../zeus_transport" }

[dev-dependencies]
zeus_client = { version = "0.1.0", path = "../zeus_client" }

[lib]
doctest = false
