[package]
name = "zeus_transport"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio = "1.49.0"
zeus_common = { version = "0.1.0", path = "../zeus_common" }

[lib]
doctest = false
